tester/testsuite/bad/bad072.jl
// Void function argument.

int main() {
  return 0;
}

void foo(void x) {
}
